--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
     types: [opened, synchronize, reopened]
 jobs:
   test:
+    name: Test
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -24,14 +25,23 @@ jobs:
           python -m pip install --upgrade pip
           pip install pipenv
           pipenv install -d
+
       - name: Run Tests
         run: |
           pipenv run coverage run --source='./tracker' tracker/manage.py test && pipenv run coverage xml
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: coverage.xml
+          path: coverage.xml
 
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: coverage.xml
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
