--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,13 +6,13 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
-  test:
-    name: Test
+  main:
+    name: Main workflow
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
       matrix:
-        python-version: ["3.10", "3.9"]
+        python-version: ["3.10"]
 
     steps:
       - uses: actions/checkout@v3
@@ -20,14 +20,13 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Dependencies
+          cache: pip
+
+      - name: Install and Test
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
           pipenv install -d
-
-      - name: Run Tests
-        run: |
           pipenv run coverage run --source='./tracker' tracker/manage.py test && pipenv run coverage xml
 
       - name: SonarCloud Scan
