--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install pipenv
           pipenv install -d
-          pipenv run coverage run --source='./tracker' tracker/manage.py test && pipenv run coverage xml
+          pipenv run coverage run --source='./tracker' tracker/manage.py test
+          pipenv run coverage xml
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
