--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ jobs:
           cache: pip
 
       - name: Install and Test
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: pip
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
