--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,11 @@ asgiref==3.5.2; python_version >= '3.7'
 certifi==2022.5.18.1; python_version >= '3.6'
 charset-normalizer==2.0.12; python_version >= '3'
 django-admin-autocomplete-filter==0.7.1
+django-environ==0.8.1
 django==4.0.4
 idna==3.3; python_version >= '3'
 pillow==9.1.1
+psycopg2-binary==2.9.3
 pytz==2022.1
 requests==2.27.1
 sqlparse==0.4.2; python_version >= '3.5'
