--- a/.github/workflows/depbot.yml
+++ b/.github/workflows/depbot.yml
@@ -1,13 +1,11 @@
-name: Main
+name: Dependabot
 on:
-  push:
-    branches:
-      - main
   pull_request:
     types: [opened, synchronize, reopened]
+
 jobs:
   main:
-    if: ${{ github.actor != 'dependabot[bot]' }}
+    if: ${{ github.actor == 'dependabot[bot]' }}
     name: Main workflow
     runs-on: ubuntu-latest
     strategy:
@@ -29,11 +27,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install pipenv
           pipenv install -d
-          pipenv run coverage run --source='./tracker' tracker/manage.py test
-          pipenv run coverage xml
-
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          pipenv run python tracker/manage.py test
