--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,6 @@
 [mypy]
 plugins = mypy_django_plugin.main
+exclude = data
 
 [mypy.plugins.django-stubs]
 django_settings_module = "tracker.settings.base"
